@@ -2347,7 +2347,8 @@ static rpmRC processPackageFiles(Spec spec, Package pkg,
 	    continue;
 	fileName = NULL;
 	/*@-nullpass@*/	/* LCL: buf is NULL ?!? */
-	strcpy(buf, s);
+	strncpy(buf, s, sizeof(buf)-1);
+	buf[sizeof(buf)-1] = '\0';
 	/*@=nullpass@*/
 	
 	/* Reset for a new line in %files */
@@ -2697,6 +2698,7 @@ int processSourceFiles(Spec spec)
     memset(&fl, 0, sizeof(fl));
     if (_srcdefattr && *_srcdefattr) {
         snprintf(_srcdefattr_buf, sizeof(_srcdefattr_buf), "%%defattr %s", _srcdefattr);
+	_srcdefattr_buf[sizeof(_srcdefattr_buf)-1] = '\0';
         parseForAttr(_srcdefattr_buf, &fl);
     }
 
