@@ -3,11 +3,12 @@
 ##
 
 %common
-    MODULE_NAMES="db lua file xar"
+    MODULE_NAMES="db lua file xar pcre"
     MODULE_TAG_DB="rpm-5_1"
     MODULE_TAG_LUA="rpm-5_1"
     MODULE_TAG_FILE="rpm-5_1"
     MODULE_TAG_XAR="rpm-5_1"
+    MODULE_TAG_PCRE=""
 
 %checkout
     for name in $MODULE_NAMES "$@"; do
@@ -79,7 +80,7 @@
         --with-nss=external \
         --with-gcrypt=external \
         --with-neon=external \
-        --with-pcre=external \
+        --with-pcre=internal \
         --with-uuid=external \
         --with-xar=internal \
         --with-popt=external \
@@ -91,7 +92,6 @@
         --with-build-extlibdep \
         --with-build-maxextlibdep \
         --enable-build-pic \
-        --enable-build-pie \
         --enable-build-versionscript \
         --enable-build-warnings \
         --enable-build-debug \
